--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prettier-plugin-svelte": "^2.9.0",
         "svelte": "^3.54.0",
         "svelte-check": "^2.10.0",
+        "svelte-french-toast": "^1.0.4-beta.0",
         "tailwindcss": "^3.2.4",
         "tslib": "^2.4.1",
         "typescript": "^4.9.3",
