--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "lz-string": "^1.5.0",
         "svelte-splitpanes": "^0.7.12"
     }
 }
