--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
         "@sveltejs/vite-plugin-svelte": "^2.0.0",
         "@tsconfig/svelte": "^3.0.0",
         "autoprefixer": "^10.4.13",
+        "html2canvas": "^1.4.1",
+        "lz-string": "^1.5.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.3",
         "prettier-plugin-svelte": "^2.9.0",
         "svelte": "^3.54.0",
         "svelte-check": "^2.10.0",
         "svelte-french-toast": "^1.0.4-beta.0",
+        "svelte-splitpanes": "^0.7.12",
         "tailwindcss": "^3.2.4",
         "tslib": "^2.4.1",
         "typescript": "^4.9.3",
         "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "lz-string": "^1.5.0",
-        "svelte-splitpanes": "^0.7.12"
     }
 }
