--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@sveltejs/vite-plugin-svelte": "^2.0.0",
         "@tsconfig/svelte": "^3.0.0",
         "autoprefixer": "^10.4.13",
-        "html2canvas": "^1.4.1",
         "lz-string": "^1.5.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.3",
@@ -22,6 +21,7 @@
         "svelte": "^3.54.0",
         "svelte-check": "^2.10.0",
         "svelte-french-toast": "^1.0.4-beta.0",
+        "svelte-icons": "^2.1.0",
         "svelte-splitpanes": "^0.7.12",
         "tailwindcss": "^3.2.4",
         "tslib": "^2.4.1",
