--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@tsconfig/svelte": "^3.0.0",
         "autoprefixer": "^10.4.13",
         "lz-string": "^1.5.0",
+        "path": "^0.12.7",
         "postcss": "^8.4.21",
         "prettier": "^2.8.3",
         "prettier-plugin-svelte": "^2.9.0",
